feat: add configurable active wearable measurement
